Devworks/src/objects/Volunteer_Job__c.object
<CustomObject>
    <fields>
        <fullName>Attributed_Volunteer_Hours__c</fullName>
        <label>Attributed Volunteer Hours</label>
        <summarizedField>Volunteer_Shift__c.Total_Vol_Hours_for_Shift__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cumulative_Volunteers_Needed__c</fullName>
        <label>Cumulative Volunteers Needed</label>
        <summarizedField>Volunteer_Shift__c.of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State_Province__c</fullName>
        <label>Location State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <label>Location Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip_Postal_Code__c</fullName>
        <label>Location Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Shifts__c</fullName>
        <label>Number of Shifts</label>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recommended_Wardrobe__c</fullName>
        <label>Recommended Wardrobe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Volunteer Activity</label>
        <referenceTo>Volunteer_Activity__c</referenceTo>
        <relationshipLabel>Volunteer Jobs</relationshipLabel>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volunteer_Organization__c</fullName>
        <formula>Volunteer_Activity__r.Volunteer_Organization__r.Name</formula>
        <label>Volunteer Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Skills__c</fullName>
        <label>Volunteer Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Volunteer_Skills_Values</valueSetName>
        </valueSet>
    </fields>
    <label>Volunteer Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Volunteer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>